Fix Home overflow bugs.

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
 }
 .home_main{
-    width: 1920px;
     margin: 0 auto;
     position: relative;
 }
